--- a/calculate_accuracy_only_foreground.ipynb
+++ b/calculate_accuracy_only_foreground.ipynb
@@ -39,31 +39,31 @@
      "output_type": "stream",
      "text": [
       "WARNING: Logging before flag parsing goes to stderr.\n",
-      "W0625 18:47:47.088788 139644870932288 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
+      "W0625 18:46:56.182980 140535278131008 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:517: The name tf.placeholder is deprecated. Please use tf.compat.v1.placeholder instead.\n",
       "\n",
-      "W0625 18:47:47.101742 139644870932288 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
+      "W0625 18:46:56.210839 140535278131008 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:74: The name tf.get_default_graph is deprecated. Please use tf.compat.v1.get_default_graph instead.\n",
       "\n",
-      "W0625 18:47:47.104654 139644870932288 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
+      "W0625 18:46:56.214529 140535278131008 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:4138: The name tf.random_uniform is deprecated. Please use tf.random.uniform instead.\n",
       "\n",
-      "W0625 18:47:47.119884 139644870932288 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:1919: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
+      "W0625 18:46:56.233520 140535278131008 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:1919: The name tf.nn.fused_batch_norm is deprecated. Please use tf.compat.v1.nn.fused_batch_norm instead.\n",
       "\n",
-      "W0625 18:47:47.122526 139644870932288 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
+      "W0625 18:46:56.236539 140535278131008 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:3976: The name tf.nn.max_pool is deprecated. Please use tf.nn.max_pool2d instead.\n",
       "\n",
-      "W0625 18:47:48.760599 139644870932288 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:2018: The name tf.image.resize_nearest_neighbor is deprecated. Please use tf.compat.v1.image.resize_nearest_neighbor instead.\n",
+      "W0625 18:46:57.883369 140535278131008 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/keras/backend/tensorflow_backend.py:2018: The name tf.image.resize_nearest_neighbor is deprecated. Please use tf.compat.v1.image.resize_nearest_neighbor instead.\n",
       "\n",
-      "W0625 18:47:49.119771 139644870932288 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:341: The name tf.log is deprecated. Please use tf.math.log instead.\n",
+      "W0625 18:46:58.247166 140535278131008 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:341: The name tf.log is deprecated. Please use tf.math.log instead.\n",
       "\n",
-      "W0625 18:47:49.126630 139644870932288 deprecation.py:323] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:399: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
+      "W0625 18:46:58.253587 140535278131008 deprecation.py:323] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:399: add_dispatch_support.<locals>.wrapper (from tensorflow.python.ops.array_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use tf.where in 2.0, which has the same broadcast rule as np.where\n",
-      "W0625 18:47:49.131263 139644870932288 deprecation.py:506] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:423: calling crop_and_resize_v1 (from tensorflow.python.ops.image_ops_impl) with box_ind is deprecated and will be removed in a future version.\n",
+      "W0625 18:46:58.259468 140535278131008 deprecation.py:506] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:423: calling crop_and_resize_v1 (from tensorflow.python.ops.image_ops_impl) with box_ind is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "box_ind is deprecated, use box_indices instead\n",
-      "W0625 18:47:49.283326 139644870932288 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:720: The name tf.sets.set_intersection is deprecated. Please use tf.sets.intersection instead.\n",
+      "W0625 18:46:58.414327 140535278131008 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:720: The name tf.sets.set_intersection is deprecated. Please use tf.sets.intersection instead.\n",
       "\n",
-      "W0625 18:47:49.286828 139644870932288 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:722: The name tf.sparse_tensor_to_dense is deprecated. Please use tf.sparse.to_dense instead.\n",
+      "W0625 18:46:58.418480 140535278131008 deprecation_wrapper.py:119] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:722: The name tf.sparse_tensor_to_dense is deprecated. Please use tf.sparse.to_dense instead.\n",
       "\n",
-      "W0625 18:47:49.348854 139644870932288 deprecation.py:323] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:772: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
+      "W0625 18:46:58.482543 140535278131008 deprecation.py:323] From /home/mia/srihari/env/instance/lib/python3.6/site-packages/mask_rcnn-2.1-py3.6.egg/mrcnn/model.py:772: to_float (from tensorflow.python.ops.math_ops) is deprecated and will be removed in a future version.\n",
       "Instructions for updating:\n",
       "Use `tf.cast` instead.\n"
      ]
@@ -128,7 +128,7 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x7f010416bda0>"
+       "<matplotlib.image.AxesImage at 0x7fd04c3ecd68>"
       ]
      },
      "execution_count": 4,
@@ -255,13 +255,9 @@
     "   - Use the channel with the maximum number of foreground prediction, this can be done by summing the prediction array along the first axis and then picking the index with maximum sum.\n",
     "   - Keep track of the channels that are previously used.\n",
     "   - The required prediction mask for the current object instance can then be got from the prediction array by using the channel got in the previous step.\n",
-    "   - Compute the pixel wise accuracy with the formula.\n",
-    "   <a href=\"https://www.codecogs.com/eqnedit.php?latex=\\inline&space;accuracy=\\frac{TP&plus;TN}{TP&plus;TN&plus;FP&plus;FN}\" target=\"_blank\"><img src=\"https://latex.codecogs.com/gif.latex?\\inline&space;accuracy=\\frac{TP&plus;TN}{TP&plus;TN&plus;FP&plus;FN}\" title=\"accuracy=\\frac{TP+TN}{TP+TN+FP+FN}\" /></a>\n",
-    "    - TP represents foreground pixels that are correctly predicted\n",
-    "    - TN represents background pixels that are correctly predicted\n",
-    "    - FP represents background pixels that are wrongly predicted\n",
-    "    - FN represents foreground pixels that are wrongle predictes\n",
-    "  - The accuracy formula can be simplfied to (correctly classified pixels) / (total pixels). This can be computed using element wise comparision with the ground truth, and then taking the mean along first axis\n",
+    "  - In this variation we only keep the foreground pixels, the background pixels are discarded.\n",
+    "  - Foreground pixels for both the ground truth and the predicted mask can be easily accessed. To do this we apply a boolean_mask got from the ground truth\n",
+    "  - The accuracy formula can be simplfied to (correctly classified foreground pixels) / (total foreground pixels). This can be computed using element wise comparision with the ground truth, and then taking the mean along first axis\n",
     "  - Get the predicted class name using the channel to index the class_ids list.\n",
     "  - If the normalized class name and predicted class name do no match, set accuracy to zero.\n",
     "  - If the current channel has already be used by a previous object\n",
@@ -294,8 +290,10 @@
     "        return -1\n",
     "    predicted_channel_id = np.argmax(p_sum, axis=0)\n",
     "    predicted_mask = masks[..., predicted_channel_id]\n",
+    "    predicted_mask_foreground = predicted_mask[labelled_mask]\n",
+    "    labelled_mask_foreground = labelled_mask[labelled_mask]\n",
     "    predicted_class = idx_class[class_ids[predicted_channel_id]]\n",
-    "    correct_pixels = predicted_mask == labelled_mask\n",
+    "    correct_pixels = predicted_mask_foreground == labelled_mask_foreground\n",
     "    if (predicted_class == mapping(label_class)):\n",
     "        if predicted_channel_id in seen_idx:\n",
     "            if label_class not in instances_classes:\n",
@@ -324,7 +322,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'Car # 10': 0.9997907021604938, 'Car # 21': 0.9988884066358025, 'Car # 11': 0.9998398919753086, 'Car # 22': 0.9992626350308642, 'Car # 16': 0.9998562885802469, 'Car # 2': 0.9998172260802469, 'Car # 23': 0.9991661844135803, 'Car # 12': 0.9997309027777778, 'building': 0, 'ground': 0, 'licenseplate': 0, 'Car # 4': 0.9998008294753087, 'vegetation': 0, 'Car # 17': 0.9997815393518519, 'road': 0, 'Car # 20': 0.9993065200617284, 'Car # 24': 0.9989940200617284, 'Car # 18': 0.9998292824074074, 'Car # 13': 0.9997882908950617, 'Car # 9': 0.9996903935185185, 'Car # 7': 0.9996990740740741, 'Car # 19': 0.9994261188271605, 'tram track': 0, 'Car # 1': 0.9989395254629629, 'Car # 3': 0.9997559799382716, 'car_group': 0.9987683256172839, 'Car # 15': 0.9991584683641975, 'rail track': 0, 'Car # 6': 0.9995187114197531, 'Car # 5': 0.9996913580246913, 'Truck # 2': 0, 'sidewalk': 0, 'Car # 14': 0.9989853395061729, 'Car # 8': 0.9997005208333334}\n"
+      "{'Car # 10': 0.42379958246346555, 'Car # 21': 0.5816869300911854, 'Car # 11': 0.8622589531680441, 'Car # 22': 0.9636505904111538, 'Car # 16': 0.94824016563147, 'Car # 2': 0.9203966764942375, 'Car # 23': 0.9587470373454615, 'Car # 12': 0.6556962025316456, 'building': 0, 'ground': 0, 'licenseplate': 0, 'Car # 4': 0.7362986497220015, 'vegetation': 0, 'Car # 17': 0.9210992907801419, 'road': 0, 'Car # 20': 0.5851950650216738, 'Car # 24': 0.9482000409081611, 'Car # 18': 0.8512396694214877, 'Car # 13': 0.7192028985507246, 'Car # 9': 0.8086560364464692, 'Car # 7': 0.7785588752196837, 'Car # 19': 0.548951048951049, 'tram track': 0, 'Car # 1': 0.8594942748091603, 'Car # 3': 0.8814432989690721, 'car_group': 0.18532695374800637, 'Car # 15': 0.27439024390243905, 'rail track': 0, 'Car # 6': 0.5714285714285714, 'Car # 5': 0.8701298701298701, 'Truck # 2': 0, 'sidewalk': 0, 'Car # 14': 0.35809018567639256, 'Car # 8': 0.7613168724279835}\n"
      ]
     }
    ],
@@ -345,7 +343,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('output.json', 'w') as f:\n",
+    "with open('output_only_foreground.json', 'w') as f:\n",
     "    json.dump(result_dict, f)"
    ]
   },
